--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>ClaimMyRide</title>
+  <title>Claim My Ride</title>
 
-    <base href="./">
+    <base href="/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -26,7 +26,7 @@
     <!-- cordova.js required for cordova apps -->
     <script src="cordova.js"></script>   
   <app-root></app-root>
-<script src="runtime.1f68d1fe30a269aa0e88.js" defer></script><script src="polyfills.fe949f7b65c1935ae4bb.js" defer></script><script src="main.827230dcb70dbaefaaaf.js" defer></script>
+<script src="runtime.c24d7edc39ced5c0ae76.js" defer></script><script src="polyfills.fe949f7b65c1935ae4bb.js" defer></script><script src="main.c8bbdff8e09ce6bc90d0.js" defer></script>
 
 
 </body></html>
